[package]
name = "heaven_underground"
version = "0.1.0"
authors = ["Lukáš Hozda <luk.hozda@gmail.com>", "Alma <alma@gjk.cat>"]
edition = "2018"
description = "The Heaven Underground"

[dependencies]
either = "1.5.3"
lazy_static = "1.4.0"
rand = "0.7.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.coffee]
path = "./coffee"
features = ["opengl", "debug"]
